--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
 body {
-    margin: 0;
+    margin: 0px;
+}
+#startstop, #gesamt {
+	display: block;
+	margin: 1em auto;
+	width: 95%;
+	height: 50px;
+	font-size: 30px;
+	font-weight: bold;
+	font-family:tahoma,"Times New Roman", Times, serif
+}
+
+h1, #cur_pos {
+	margin-top: 1em;
+	margin-left: 2em;
+}
+#cur_pos {
+	font-size: 26px;
 }
