--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ body {
 	font-weight: bold;
 	font-family:tahoma,"Times New Roman", Times, serif
 }
-
-h1, #cur_pos {
+#time,
+#total_dis,
+h1, #dis {
 	margin-top: 1em;
 	margin-left: 2em;
 }
